upgrade to gpt-4-turbo

--- a/notebook/mailing-list-summaries.ipynb
+++ b/notebook/mailing-list-summaries.ipynb
@@ -333,7 +333,7 @@
         "# configs to get token length\n",
         "tokenizer = tiktoken.get_encoding(\"cl100k_base\")\n",
         "\n",
-        "# if set to True, it will use chatgpt model (\"gpt-3.5-turbo\") for all the completions\n",
+        "# if set to True, it will use chatgpt model (\"gpt-4-1106-preview\") for all the completions\n",
         "CHATGPT = True\n",
         "\n",
         "# COMPLETION_MODEL - only applicable if CHATGPT is set to False\n",
@@ -563,7 +563,7 @@
         "def generate_chatgpt_summary(prompt):\n",
         "    summarization_prompt = f\"Generate a detailed summary from below context factfully without missing any important information. Do not use the word 'summary' in it.\\n\\n CONTEXT:\\n\\n{prompt}\"\n",
         "    response = openai.ChatCompletion.create(\n",
-        "        model=\"gpt-3.5-turbo\",\n",
+        "        model=\"gpt-4-1106-preview\",\n",
         "        messages=[\n",
         "                {\"role\": \"system\", \"content\": \"You are an intelligent assistant.\"},\n",
         "                {\"role\": \"user\", \"content\": f\"{summarization_prompt}\"},\n",
@@ -580,7 +580,7 @@
         "def consolidate_chatgpt_summary(prompt):\n",
         "    consolidate_prompt = f\"Consolidate below context.\\n\\n CONTEXT:\\n\\n{prompt}\"\n",
         "    response = openai.ChatCompletion.create(\n",
-        "        model=\"gpt-3.5-turbo\",\n",
+        "        model=\"gpt-4-1106-preview\",\n",
         "        messages=[\n",
         "                {\"role\": \"system\", \"content\": \"You are an intelligent assistant.\"},\n",
         "                {\"role\": \"user\", \"content\": f\"{consolidate_prompt}\"},\n",
@@ -597,7 +597,7 @@
         "def generate_chatgpt_title(prompt):\n",
         "    title_generation_prompt = f\"Generate an appropriate title for below context.\\n\\n CONTEXT:\\n\\n{prompt}\"\n",
         "    response = openai.ChatCompletion.create(\n",
-        "        model=\"gpt-3.5-turbo\",\n",
+        "        model=\"gpt-4-1106-preview\",\n",
         "        messages=[\n",
         "                {\"role\": \"system\", \"content\": \"You are an intelligent assistant.\"},\n",
         "                {\"role\": \"user\", \"content\": f\"{title_generation_prompt}\"},\n",
